@@ -4,6 +4,10 @@ Changelog
 2.0b2 (Unreleased)
 ------------------
 
+- Don't add the annotation unless a comment is actually being added.
+  Fixes #11370.
+  [rossp]
+
 - Fixed i18n of the "Commenting has been disabled." message.
   [vincentfretin]
 
